--- a/views/importtopline.ejs
+++ b/views/importtopline.ejs
@@ -24,7 +24,7 @@
 		</div>
 		<div class="mainbox size-std column">
 			<div class="title-content size-std" style="background-color: #68baf9; width: 100%; padding: 10px 10px; margin: 10px 5px; color: #ffffff;">
-				<a href="<%= baseurl() %>">DASHBOARD</a> > <a href="<%= baseurl() %>report">Report</a> > <a href="<%= baseurl() %>report/pdf/download">PDF</a> > Import - <%= login.nameses %>
+				<a href="<%= baseurl() %>">DASHBOARD</a> > <a href="<%= baseurl() %>report">Report</a> > <a href="<%= baseurl() %>report/Topline/download">Topline</a> > Import - <%= login.nameses %>
             </div>
             <div class="cols-12 column containt" style="margin: 10px 0; background-color: #ffffff;">
                 <div class="headtitle trans">
@@ -36,22 +36,13 @@
                     </ul>
                 </div>
                 <div class="cols-12" style="padding: 35px 0;">
-                    <form ref='uploadForm' action="/report/pdf/save" method="POST" enctype="multipart/form-data">
+                    <form ref='uploadForm' action="/report/topline/save" method="POST" enctype="multipart/form-data">
                             <table style="width: 100%; height: 100%;" cellspacing="5"cellpadding="5">
                                 <tr>
                                     <td style="text-align: center; border: 1px dashed #00aaab; height: 400px;">
                                         <input type="file" name="filepdf" id="file-1" class="inputfile inputfile-1" data-multiple-caption="{count} files selected" multiple style="display:none;" required="required" />
                                         <label for="file-1"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="17" viewBox="0 0 20 17"><path d="M10 0l-5.2 4.9h3.3v5.1h3.8v-5.1h3.3l-5.2-4.9zm9.3 11.5l-3.2-2.1h-2l3.4 2.6h-3.5c-.1 0-.2.1-.2.1l-.8 2.3h-6l-.8-2.2c-.1-.1-.1-.2-.2-.2h-3.6l3.4-2.6h-2l-3.2 2.1c-.4.3-.7 1-.6 1.5l.6 3.1c.1.5.7.9 1.2.9h16.3c.6 0 1.1-.4 1.3-.9l.6-3.1c.1-.5-.2-1.2-.7-1.5z"/></svg> 
                                         <span style="margin-top:5px;" class="size-std">Choose a file&hellip;</span></label>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <select name="dealer" id="" required>
-                                        <% for(var res of result){ %>
-                                            <option value="<%= res.id_dealer %>"><%= res.id_dealer+" - "+res.name_dealer %></option>
-                                        <% }%>
-                                        </select>
                                     </td>
                                 </tr>
                                 <tr>
@@ -68,7 +59,7 @@
                                 </tr>
                                 <tr>
                                     <td>
-                                        <select name="monthpdf" id="">
+                                        <select name="monthtopline" id="">
                                             <option value="">-- Select Month --</option>
                                             <% 
                                                 var month = ["Jan","Feb","Mar","Apr","May","Jun","jul","Aug","Sep","Okt","Nov","Dec"]
