--- a/views/report.ejs
+++ b/views/report.ejs
@@ -147,14 +147,21 @@
 					
 					<div class="list-control-box">
 						<button class="option-click btn-list-control size-std" onclick="clickToggle(list_month)">
-							Show By :&nbsp; Month
+							Show By :&nbsp; 
+							<% 
+							var month = ["Jan","Feb","Mar","Apr","May","Jun","jul","Aug","Sep","Okt","Nov","Dec"] 
+							if(control.month==''){
+							%> 
+								Month
+							<% }else{ %> 
+							<%= month[control.month-1] %>
+							<% } %>
 							<img src="<%= baseurl() %>images/icon/arrow-down.png" class="icon-list-control">
 						</button>
 						<div class="option-box option-menu shadow half box-list-control" id="list_month">
 							<ul class="full-length nopad">
 
 								<% 
-								var month = ["Jan","Feb","Mar","Apr","May","Jun","jul","Aug","Sep","Okt","Nov","Dec"]
 								for(var m=0;m < month.length; m++){ 
 								%>
 								<a href="<%= baseurl() %>report/<%= control.linkmonth %>month=<%= m+1 %>"><li class="pad-tb size-std"><%= month[m] %></li></a>
@@ -166,6 +173,10 @@
 					<div class="list-control-box">
 						<button class="option-click btn-list-control size-std" onclick="clickToggle(list_week)">
 							Show By :&nbsp; Week
+							<% if(control.week==''){%> 
+							<% }else{ %> 
+							<%= control.week %>
+							<% } %>
 							<img src="<%= baseurl() %>images/icon/arrow-down.png" class="icon-list-control">
 						</button>
 						<div class="option-box option-menu shadow half box-list-control" id="list_week">
