--- a/views/login.ejs
+++ b/views/login.ejs
@@ -22,7 +22,7 @@
                 <table>
                     <tr>
                         <td>
-                            <p><input type="email" name="email" placeholder="Your Email" value="rmalem@kadence.com"></p>
+                            <p><input type="email" name="email" placeholder="Your Email" value=""></p>
                             <p>
                                 <select name="dealer" id="">
                                     <option value="0">-- Select Dealer -- </option>
@@ -31,7 +31,7 @@
                                     <% } %>
                                 </select>
                             </p>
-                            <p><input type="password" name="password" placeholder="Your password" value="kadencexnissan"></p>
+                            <p><input type="password" name="password" placeholder="Your password" value=""></p>
                             <p><input type="submit" value="Login" class="myButton-flat-green"></p>
                         </td>
                     </tr>
