--- a/views/importtopline.ejs
+++ b/views/importtopline.ejs
@@ -59,6 +59,21 @@
                                 </tr>
                                 <tr>
                                     <td>
+                                        <select name="group" id="">
+                                            <option value="">-- Select Group --</option>
+                                            <option value="IMG">IMG</option>
+                                            <option value="AKA">AKA</option>
+                                            <option value="MPA">MPA</option>
+                                            <option value="RMM">RMM</option>
+                                            <option value="WSBY">WSBY</option>
+                                            <option value="DPO">DPO</option>
+                                            <option value="JKM">JKM</option>
+                                            <option value="MUA">MUA</option>
+                                        </select>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
                                         <select name="monthtopline" id="">
                                             <option value="">-- Select Month --</option>
                                             <% 
