--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -12,6 +12,7 @@
         <% } %>
         <li><a href="<%= baseurl() %>report/pdf/download/" class="size-std"><img src="<%= baseurl() %>images/icon/report-pdf.png">Offline Report PDF</a></li>
         <% if(login.typeses=="super"){ %>
+        <li><a href="<%= baseurl() %>report/xlsoffline/download/" class="size-std"><img src="<%= baseurl() %>images/icon/report.png">Offline Report Excel</a></li>
         <li><a href="<%= baseurl() %>report/ppt/download/" class="size-std"><img src="<%= baseurl() %>images/icon/report.png">NMI/NML Report</a></li>
         <li><a href="<%= baseurl() %>user" class="size-std"><img src="<%= baseurl() %>images/icon/profile-blue.png">User</a></li>
         <% } %>
