--- a/views/importxlsoff.ejs
+++ b/views/importxlsoff.ejs
@@ -55,6 +55,10 @@
                                             <input type="radio" id="radio02" name="panel" value="SSI">
                                             <label for="radio02" id="chartline"><span></span>SSI</label>
                                         </div>
+                                        <div class="radiotype1">
+                                            <input type="radio" id="radio03" name="panel" value="SUM">
+                                            <label for="radio03" id="chartline"><span></span>SUMMARY CRITICAL DEALER</label>
+                                        </div>
                                     </td>
                                 </tr>
                                 <tr>
